# ca22-pdf

./: .gitignore  Dockerfile  README.md  pyproject.toml
ca22_pdf/: download.py  init_db.py  parser.py
ca22_pdf/db/: base.py  model.py
data/: categories.yml
tests/: test_ca22_pdf.py  test_cat.py
