[tool.poetry]
name = "ca22-pdf"
version = "0.2.0"
description = ""
authors = ["zwanto <antoine.hamon@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"
sqlalchemy = {git = "https://github.com/sqlalchemy/sqlalchemy.git", rev = "0566df2"}
PyYAML = "^6.0"
absl-py = "^1.0.0"
webdavclient3 = "^3.14.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
